--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.2.8",
     "@nestjs/core": "^10.2.8",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.6.2",
+    "mongoose": "^8.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
