--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["node", "@nestjs/platform-express"],
     "module": "commonjs",
     "declaration": true,
     "emitDecoratorMetadata": true,
