--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -39,6 +40,7 @@
     "@types/babel__core": "^7.20.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.3.1",
     "@types/node-telegram-bot-api": "^0.63.2",
     "@types/supertest": "^2.0.12",
